2009-09-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Framework/PCMakefileFactory.m ([-createMakefileForProject:]): If
	GNUSTEP_INSTALLATION_DOMAIN is not set, do not output it.  This is
	what was already happening, but the code seemed to assume
	otherwise.

2009-09-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	Old patch from Markus Hitter <mah@jump-ing.de>, updated to the
	current code:
	* Framework/PCProjectManager.m ([-openProjectAt:makeActive:]): Pop
	up a warning panel if the project path includes a whitespace.
	([-newProject]): Same change.

2009-09-15 Richard frith-Macdonald <rfm@gnu.org>

	* Framework/PCMakefileFactory.m: generate makefiles with standard
	preamble to determine GNUSTEP_MAKEFILES if possible, and warn if
	not found.

2009-09-15 Riccardo Mottola <rmottola@users.sf.net>
	
	* Headers/ProjectCenter/PCProject.h
	* Framework/PCProject.m
	Removed execToolName

	* Framework/PCProjectLauncher.m
	Launch executable directly without openapp/opentool and do not use
	execToolName to determine the project type
	
2009-06-23 18:22-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCProject.m
	* Framework/PCProjectManager.m
	* Headers/ProjectCenter/PCProjectManager.h
	* PCAppController.m: Correct issues with project bundle loading.

2009-05-19 17:13-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Resources/Info-gnustep.plist: Added PCProjectFileType to the
	entry for pcproj to allow opening of bundles.

2009-06-10 Riccardo Mottola
	
	* Framework/PCProject.m,
	* Framework/PCProjectManager.m
	* Framework/PCProjectWindow.m
	* Headers/ProjectCenter/PCDefines.h
	use PCDefine constant for PC_WINDOWS dictionary key

2009-06-10 Riccardo Mottola
	
	* Framework/PCProject.m
	save last editing in user file inside the wrapper and not 
	main project file
	
2009-05-19 17:13-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCEditorManager.m: Added code in -openEditorForFile: