@@ -1,3 +1,8 @@
+2009-09-18 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Framework/PCProjectLauncher.m
+	Use path component instead of hard-coded slash
+
 2009-09-17  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* Framework/PCMakefileFactory.m ([-createMakefileForProject:]): If
